--- a/GAP/CMakeLists.txt
+++ b/GAP/CMakeLists.txt
@@ -3,10 +3,9 @@ set(PROJECT_DIR ".")
 set(PROJECT_SOURCE_DIR ${PROJECT_DIR}/src)
 set(source_dir "${PROJECT_SOURCE_DIR}")
 
-file(GLOB_RECURSE source_files "${source_dir}/*.cpp")
 include_directories(include/)
 
-add_executable(GAP ${source_files})
+add_executable(GAP src/main.cpp src/physics_math.cpp src/entity.cpp)
 
 target_link_libraries(
             GAP
